try to done my protfolio page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="assets/images/favicon.png"
       type="image/x-icon"
     />
-    <title>Filix</title>
+    <title>Masud Rana</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
 
