try to done my protfolio page

--- a/blog-single.html
+++ b/blog-single.html
@@ -89,15 +89,15 @@
                         <div class="sub_footer">
                             <ul class="footer_contact text-center">
                                 <li>
-                                    <a href="mailto:hello@droitthemes.com">
-                                        <span>hello@droitthemes.com</span>
-                                        <span>hello@droitthemes.com</span>
+                                    <a href="mailto:masudrana2779@gmail.com">
+                                        <span>masudrana2779@gmail.com</span>
+                                        <span>masudrana2779@gmail.com</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="tel:2345674560">
-                                        <span>+234 567 4560</span>
-                                        <span>+234 567 4560</span>
+                                    <a href="tel:+8801928292779">
+                                        <span>+880 1928 292779</span>
+                                        <span>+880 1928 292779</span>
                                     </a>
                                 </li>
                             </ul>
@@ -394,15 +394,15 @@
                         <h2 class="footer_title text-center wow fadeInUp">Let’s Make <span>Something Great</span> Together</h2>
                         <ul class="footer_contact text-center wow fadeInUp">
                             <li>
-                                <a href="mailto:hello@droitthemes.com">
-                                    <span>hello@droitthemes.com</span>
-                                    <span>hello@droitthemes.com</span>
+                                <a href="mailto:masudrana2779@gmail.com">
+                                    <span>masudrana2779@gmail.com</span>
+                                    <span>masudrana2779@gmail.com</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="tel:2345674560">
-                                    <span>+234 567 4560</span>
-                                    <span>+234 567 4560</span>
+                                <a href="tel:+8801928292779">
+                                    <span>+880 1928 292779</span>
+                                    <span>+880 1928 292779</span>
                                 </a>
                             </li>
                         </ul>
