--- a/index.html
+++ b/index.html
@@ -70,28 +70,28 @@
                 <div class="header_main_menu">
                   <ul class="menu_item">
                     <li class="submenu">
-                      <a href="#">Home</a>
-                      <ul class="submenu_item">
+                      <a href="index.html">Home</a>
+                      <!-- <ul class="submenu_item">
                         <li><a href="index.html">Default</a></li>
                         <li><a href="index-2.html">Particle</a></li>
                         <li><a href="index-3.html">Youtube Video</a></li>
                         <li><a href="index-4.html">Self Hosted Video</a></li>
                         <li><a href="index-5.html">Slideshow</a></li>
-                      </ul>
+                      </ul> -->
                     </li>
                     <li class="submenu">
-                      <a href="#">Portfolio</a>
-                      <ul class="submenu_item">
+                      <a href="portfolio-2.html">Portfolio</a>
+                      <!-- <ul class="submenu_item">
                         <li><a href="portfolio-2.html">2 Columns</a></li>
                         <li><a href="portfolio-3.html">3 Columns</a></li>
                         <li>
                           <a href="portfolio-single.html">Portfolio Single</a>
                         </li>
-                      </ul>
+                      </ul> -->
                     </li>
                     <li class="submenu">
-                      <a href="#">Blog</a>
-                      <ul class="submenu_item">
+                      <a href="blog-sidebar.html">Blog</a>
+                      <!-- <ul class="submenu_item">
                         <li><a href="blog.html">Default </a></li>
                         <li><a href="blog-sidebar.html">With Sidebar </a></li>
                         <li><a href="blog-single.html">Default Single</a></li>
@@ -100,7 +100,7 @@
                             >Single With Sidebar</a
                           >
                         </li>
-                      </ul>
+                      </ul> -->
                     </li>
                     <li><a href="contact.html">Contact</a></li>
                   </ul>
@@ -109,15 +109,15 @@
               <div class="sub_footer">
                 <ul class="footer_contact text-center">
                   <li>
-                    <a href="mailto:hello@droitthemes.com">
-                      <span>hello@droitthemes.com</span>
-                      <span>hello@droitthemes.com</span>
+                    <a href="mailto:masudrana2779@gmail.com">
+                      <span>masudrana2779@gmail.com</span>
+                      <span>masudrana2779@gmail.com</span>
                     </a>
                   </li>
                   <li>
-                    <a href="tel:2345674560">
-                      <span>+234 567 4560</span>
-                      <span>+234 567 4560</span>
+                    <a href="tel:+8801928292779">
+                      <span>+880 1928 292779</span>
+                      <span>+880 1928 292779</span>
                     </a>
                   </li>
                 </ul>
