try to done my protfolio page

--- a/blog-sidebar.html
+++ b/blog-sidebar.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-    <title>Filix | Blog Sidebar </title>
+    <title>Masud Rana | Blog Sidebar </title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     
@@ -245,7 +245,7 @@
                                         <li class="float-right"><span class="post_time"><img src="assets/images/svg/timetable.svg" alt="icon">January 10, 2019 </span></li>
                                     </ul>
                                     <h3 class="post_title"><a href="blog-single.html">Business is the activity of making one’s</a></h3>
-                                    <p class="post_details">Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix. I searched for long, failed to choose a suitable lne until I found Filix.</p>
+                                    <p class="post_details">Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana. I searched for long, failed to choose a suitable lne until I found Masud Rana.</p>
                                     <a href="blog-single.html" class="read_more">Explore </a>
                                 </div>
                             </div>
@@ -261,7 +261,7 @@
                                         <li class="float-right"><span class="post_time"><img src="assets/images/svg/timetable.svg" alt="icon">January 10, 2019 </span></li>
                                     </ul>
                                     <h3 class="post_title"><a href="blog-single.html">Business is the activity of making one’s</a></h3>
-                                    <p class="post_details">Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix. I searched for long, failed to choose a suitable lne until I found Filix.</p>
+                                    <p class="post_details">Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana. I searched for long, failed to choose a suitable lne until I found Masud Rana.</p>
                                     <a href="blog-single.html" class="read_more">Explore </a>
                                 </div>
                             </div>
@@ -277,7 +277,7 @@
                                         <li class="float-right"><span class="post_time"><img src="assets/images/svg/timetable.svg" alt="icon">January 10, 2019 </span></li>
                                     </ul>
                                     <h3 class="post_title"><a href="blog-single.html">Business is the activity of making one’s</a></h3>
-                                    <p class="post_details">Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix. I searched for long, failed to choose a suitable lne until I found Filix.</p>
+                                    <p class="post_details">Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana. I searched for long, failed to choose a suitable lne until I found Masud Rana.</p>
                                     <a href="blog-single.html" class="read_more">Explore </a>
                                 </div>
                             </div>
@@ -304,7 +304,7 @@
                             </div>
                             <div class="sidebar_about_content">
                                 <h4 class="text-center sidebar_ab_title">John Smith</h4>
-                                <p class="text-center sidebar_ab_details">Filix acwas outstanding! I was looking for a professional to design and develop my new website for my recipe blog. </p>
+                                <p class="text-center sidebar_ab_details">Masud Rana acwas outstanding! I was looking for a professional to design and develop my new website for my recipe blog. </p>
                                 <div class="sign text-center">
                                     <img src="assets/images/sidebar_sing.png" alt="img" class="img-fluid">
                                 </div>
