--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <title>Filix | contact </title>
+    <title>Masud Rana | contact </title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     
@@ -174,7 +174,7 @@
             <div class="row d-flex align-items-center">
                 <div class="col-md-12 col-12">
                     <div class="banner_content">
-                        <h1 class="banner_title">Contact Filix</h1>
+                        <h1 class="banner_title">Contact Masud Rana</h1>
                         <p class="banner_para wow fadeInUp">We will help your brand to flourish, your business.</p>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                         </div>
                         <div class="interesting_content wow fadeInUp" data-wow-delay="0.4s">
                             <h4>NYC Office</h4>
-                            <p>1243, Manhattan, NYC 123 324 4564 <a href="#"><span>hello@filix.com</span><span>hello@filix.com</span></a> </p>
+                            <p>1243, Manhattan, NYC 123 324 4564 <a href="#"><span>hello@mrana.com</span><span>hello@mrana.com</span></a> </p>
                         </div>
                     </div>
                 </div>
@@ -254,7 +254,7 @@
                         </div>
                         <div class="interesting_content wow fadeInUp" data-wow-delay="0.6s">
                             <h4>London Office</h4>
-                            <p>12/B, Southampton, London 234 324 4564  <a href="#"><span>hilondon@filix.com</span> <span>hilondon@filix.com</span></a> </p>
+                            <p>12/B, Southampton, London 234 324 4564  <a href="#"><span>hilondon@mrana.com</span> <span>hilondon@mrana.com</span></a> </p>
                         </div>
                     </div>
                 </div>
@@ -265,7 +265,7 @@
                         </div>
                         <div class="interesting_content wow fadeInUp" data-wow-delay="0.8s">
                             <h4>Paris Office</h4>
-                            <p>43, Monte Carlo, Paris 123 324 4564 <a href="#"><span>hello@filix.com</span><span>hello@filix.com</span></a> </p>
+                            <p>43, Monte Carlo, Paris 123 324 4564 <a href="#"><span>hello@mrana.com</span><span>hello@mrana.com</span></a> </p>
                         </div>
                     </div>
                 </div>
