--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                 </h1>
               </div>
               <h4 class="wow fadeInUp" data-wow-delay="0.5s">
-                I’m Filix, a <a href="#">visual designer</a> based in London.
+                I’m Masud Rana, a <a href="#">visual designer</a> based in London.
                 <br />
                 My major strengths are branding, <a href="#">web design,</a>
                 <br />
@@ -1003,10 +1003,10 @@
                 <div class="test_details_slider_item">
                   <h3 class="slider_title">Outstanding Experience!</h3>
                   <p>
-                    Filix was outstanding! I was looking for a professional to
+                    Masud Rana was outstanding! I was looking for a professional to
                     design and develop my new website for my recipe blog. I
                     searched for long, failed to choose a suitable lne until I
-                    found Filix.
+                    found Masud Rana.
                   </p>
                   <h5 class="autor_name">Danny Morisson</h5>
                   <h6 class="autor_title">Founder & CEO, ABC</h6>
@@ -1014,10 +1014,10 @@
                 <div class="test_details_slider_item">
                   <h3 class="slider_title">Outstanding Experience!</h3>
                   <p>
-                    Filix was outstanding! I was looking for a professional to
+                    Masud Rana was outstanding! I was looking for a professional to
                     design and develop my new website for my recipe blog. I
                     searched for long, failed to choose a suitable lne until I
-                    found Filix.
+                    found Masud Rana.
                   </p>
                   <h5 class="autor_name">Danny Morisson</h5>
                   <h6 class="autor_title">Founder & CEO, ABC</h6>
@@ -1025,10 +1025,10 @@
                 <div class="test_details_slider_item">
                   <h3 class="slider_title">Outstanding Experience!</h3>
                   <p>
-                    Filix was outstanding! I was looking for a professional to
+                    Masud Rana was outstanding! I was looking for a professional to
                     design and develop my new website for my recipe blog. I
                     searched for long, failed to choose a suitable lne until I
-                    found Filix.
+                    found Masud Rana.
                   </p>
                   <h5 class="autor_name">Danny Morisson</h5>
                   <h6 class="autor_title">Founder & CEO, ABC</h6>
@@ -1036,10 +1036,10 @@
                 <div class="test_details_slider_item">
                   <h3 class="slider_title">Outstanding Experience!</h3>
                   <p>
-                    Filix was outstanding! I was looking for a professional to
+                    Masud Rana was outstanding! I was looking for a professional to
                     design and develop my new website for my recipe blog. I
                     searched for long, failed to choose a suitable lne until I
-                    found Filix.
+                    found Masud Rana.
                   </p>
                   <h5 class="autor_name">Danny Morisson</h5>
                   <h6 class="autor_title">Founder & CEO, ABC</h6>
@@ -1047,10 +1047,10 @@
                 <div class="test_details_slider_item">
                   <h3 class="slider_title">Outstanding Experience!</h3>
                   <p>
-                    Filix was outstanding! I was looking for a professional to
+                    Masud Rana was outstanding! I was looking for a professional to
                     design and develop my new website for my recipe blog. I
                     searched for long, failed to choose a suitable lne until I
-                    found Filix.
+                    found Masud Rana.
                   </p>
                   <h5 class="autor_name">Danny Morisson</h5>
                   <h6 class="autor_title">Founder & CEO, ABC</h6>
@@ -1058,10 +1058,10 @@
                 <div class="test_details_slider_item">
                   <h3 class="slider_title">Outstanding Experience!</h3>
                   <p>
-                    Filix was outstanding! I was looking for a professional to
+                    Masud Rana was outstanding! I was looking for a professional to
                     design and develop my new website for my recipe blog. I
                     searched for long, failed to choose a suitable lne until I
-                    found Filix.
+                    found Masud Rana.
                   </p>
                   <h5 class="autor_name">Danny Morisson</h5>
                   <h6 class="autor_title">Founder & CEO, ABC</h6>
