--- a/portfolio-3.html
+++ b/portfolio-3.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <title>Filix | Portfolio </title>
+    <title>Masud Rana | Portfolio </title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-lg-12 col-12">
                     <nav class="navbar">
-                        <a class="navbar-brand logo" href="index.html"><span class="logo_text">Filix</span></a>
+                        <a class="navbar-brand logo" href="index.html"><span class="logo_text">Masud Rana</span></a>
                         <div class="select_lang ml-auto">
                             <a href="#" class="lang en active">EN</a>
                             <a href="#" class="lang fr">FR</a>
@@ -387,7 +387,7 @@
                 <div class="col-md-12 col-12">
                     <div class="footer_content">
                         <div class="footer_logo text-center wow fadeInUp">
-                            <a href="index.html"><span class="logo_text">Filix</span></a>
+                            <a href="index.html"><span class="logo_text">Masud Rana</span></a>
                         </div>
                         <h2 class="footer_title text-center wow fadeInUp">Let’s Make <span>Something Great</span> Together</h2>
                         <ul class="footer_contact text-center wow fadeInUp">
