--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <title>Filix | Portfolio </title>
+    <title>Masud Rana | Portfolio </title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     
@@ -246,7 +246,7 @@
                                 <ul class="project_summary_list">
                                     <li><b>Appointed date:</b>  12th May 2019</li>
                                     <li><b>Completion:</b>  23th October 2019</li>
-                                    <li><b>Website:</b><a href="index.html"><span>www.filix.com</span><span>www.filix.com</span></a></li>
+                                    <li><b>Website:</b><a href="index.html"><span>www.Masud Rana.com</span><span>www.Masud Rana.com</span></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -257,7 +257,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-12 single_body">
                     <h3 class="portfolio_single_title">Research</h3>
-                    <p class="portfolio_para">Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix. I searched for long, failed to choose a suitable lne until I found Filix </p>
+                    <p class="portfolio_para">Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana. I searched for long, failed to choose a suitable lne until I found Masud Rana </p>
                     <div class="row">
                         <div class="col-12">
                             <div class="portfolio_single_img">
@@ -278,7 +278,7 @@
                         </div>
                     </div>
                     <h3 class="portfolio_single_title">Prototype</h3>
-                    <p class="portfolio_para">Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix. I searched for long, failed to choose a suitable lne until I found Filix </p>
+                    <p class="portfolio_para">Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana. I searched for long, failed to choose a suitable lne until I found Masud Rana </p>
                     <div class="row">
                         <div class="col-12">
                             <div class="portfolio_single_img mb_55">
@@ -286,7 +286,7 @@
                             </div>
                         </div>
                     </div>
-                    <p class="portfolio_para">Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix. I searched for long, failed to choose a suitable lne until I found Filix </p>
+                    <p class="portfolio_para">Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana. I searched for long, failed to choose a suitable lne until I found Masud Rana </p>
                 </div>
             </div>
         </div>
