--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-    <title>Filix | Blog </title>
+    <title>Masud Rana | Blog </title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-lg-12 col-12">
                     <nav class="navbar">
-                        <a class="navbar-brand logo" href="index.html"><span class="logo_text">Filix</span></a>
+                        <a class="navbar-brand logo" href="index.html"><span class="logo_text">Masud Rana</span></a>
                         <div class="select_lang ml-auto">
                             <a href="#" class="lang en active">EN</a>
                             <a href="#" class="lang fr">FR</a>
@@ -207,7 +207,7 @@
                                         <li class="float-right"><span class="post_time"><img src="assets/images/svg/timetable.svg" alt="icon">January 10, 2019 </span></li>
                                     </ul>
                                     <h3 class="post_title"><a href="blog-single.html">Business is the activity of making one’s</a></h3>
-                                    <p class="post_details">Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix. I searched for long, failed to choose a suitable lne until I found Filix.</p>
+                                    <p class="post_details">Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana. I searched for long, failed to choose a suitable lne until I found Masud Rana.</p>
                                     <a href="blog-single.html" class="read_more">Explore </a>
                                 </div>
                             </div>
@@ -223,7 +223,7 @@
                                         <li class="float-right"><span class="post_time"><img src="assets/images/svg/timetable.svg" alt="icon">January 10, 2019 </span></li>
                                     </ul>
                                     <h3 class="post_title"><a href="blog-single.html">Business is the activity of making one’s</a></h3>
-                                    <p class="post_details">Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix. I searched for long, failed to choose a suitable lne until I found Filix.</p>
+                                    <p class="post_details">Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana. I searched for long, failed to choose a suitable lne until I found Masud Rana.</p>
                                     <a href="blog-single.html" class="read_more">Explore </a>
                                 </div>
                             </div>
@@ -239,7 +239,7 @@
                                         <li class="float-right"><span class="post_time"><img src="assets/images/svg/timetable.svg" alt="icon">January 10, 2019 </span></li>
                                     </ul>
                                     <h3 class="post_title"><a href="blog-single.html">Business is the activity of making one’s</a></h3>
-                                    <p class="post_details">Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix. I searched for long, failed to choose a suitable lne until I found Filix.</p>
+                                    <p class="post_details">Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana. I searched for long, failed to choose a suitable lne until I found Masud Rana.</p>
                                     <a href="blog-single.html" class="read_more">Explore </a>
                                 </div>
                             </div>
@@ -270,7 +270,7 @@
                 <div class="col-md-12 col-12">
                     <div class="footer_content">
                         <div class="footer_logo text-center wow fadeInUp">
-                            <a href="index.html"><span class="logo_text">Filix</span></a>
+                            <a href="index.html"><span class="logo_text">Masud Rana</span></a>
                         </div>
                         <h2 class="footer_title text-center wow fadeInUp">Let’s Make <span>Something Great</span> Together</h2>
                         <ul class="footer_contact text-center wow fadeInUp">
