--- a/index-3.html
+++ b/index-3.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <title>Filix</title>
+    <title>Masud Rana</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-lg-12 col-12">
                     <nav class="navbar">
-                        <a class="navbar-brand logo" href="index.html"><span class="logo_text">Filix</span></a>
+                        <a class="navbar-brand logo" href="index.html"><span class="logo_text">Masud Rana</span></a>
                         <div class="select_lang ml-auto">
                             <a href="#" class="lang en active">EN</a>
                             <a href="#" class="lang fr">FR</a>
@@ -160,7 +160,7 @@
             <div class="row d-flex align-items-center height_vh">
                 <div class="col-md-12 col-12">
                     <div class="banner_content">
-                        <h1 class="banner_title">Filix <br> Studio </h1>
+                        <h1 class="banner_title">Masud Rana <br> Studio </h1>
                         <ul class="exp_list">
                             <li class=" wow fadeInUp" data-wow-duration='1s'>Ux Research</li>
                             <li class=" wow fadeInUp" data-wow-duration='2s'>UI Design</li>
@@ -297,7 +297,7 @@
                     <h2 class="about_title wow fadeInUp">About Me</h2>
                     <div class="about_content">
                         <div class="bg_text"><h1 class="bg_strock_text" data-parallax='{"x": -150}'>About</h1></div>
-                        <h4 class=" wow fadeInUp" data-wow-delay="0.5s">I’m Filix, a <a href="#">visual designer</a> based in London. <br> My major strengths are branding, <a href="#">web design,</a> <br> web development, ui/ux design, content strategy, <br>  <a href="#">motion gaphics </a> and so on. I specialize in helping <br> startups grow their businesses. </h4>
+                        <h4 class=" wow fadeInUp" data-wow-delay="0.5s">I’m Masud Rana, a <a href="#">visual designer</a> based in London. <br> My major strengths are branding, <a href="#">web design,</a> <br> web development, ui/ux design, content strategy, <br>  <a href="#">motion gaphics </a> and so on. I specialize in helping <br> startups grow their businesses. </h4>
                     </div>
                 </div>
             </div>
@@ -690,37 +690,37 @@
                         <div class="test_details_slider wow fadeInUp">
                             <div class="test_details_slider_item">
                                 <h3 class="slider_title">Outstanding Experience!</h3>
-                                <p>Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix.</p>
+                                <p>Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana.</p>
                                 <h5 class="autor_name">Danny Morisson </h5>
                                 <h6 class="autor_title">Founder & CEO, ABC</h6>
                             </div>
                             <div class="test_details_slider_item">
                                 <h3 class="slider_title">Outstanding Experience!</h3>
-                                <p>Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix.</p>
+                                <p>Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana.</p>
                                 <h5 class="autor_name">Danny Morisson </h5>
                                 <h6 class="autor_title">Founder & CEO, ABC</h6>
                             </div>
                             <div class="test_details_slider_item">
                                 <h3 class="slider_title">Outstanding Experience!</h3>
-                                <p>Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix.</p>
+                                <p>Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana.</p>
                                 <h5 class="autor_name">Danny Morisson </h5>
                                 <h6 class="autor_title">Founder & CEO, ABC</h6>
                             </div>
                             <div class="test_details_slider_item">
                                 <h3 class="slider_title">Outstanding Experience!</h3>
-                                <p>Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix.</p>
+                                <p>Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana.</p>
                                 <h5 class="autor_name">Danny Morisson </h5>
                                 <h6 class="autor_title">Founder & CEO, ABC</h6>
                             </div>
                             <div class="test_details_slider_item">
                                 <h3 class="slider_title">Outstanding Experience!</h3>
-                                <p>Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix.</p>
+                                <p>Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana.</p>
                                 <h5 class="autor_name">Danny Morisson </h5>
                                 <h6 class="autor_title">Founder & CEO, ABC</h6>
                             </div>
                             <div class="test_details_slider_item">
                                 <h3 class="slider_title">Outstanding Experience!</h3>
-                                <p>Filix was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Filix.</p>
+                                <p>Masud Rana was outstanding! I was looking for a professional to design and develop my new website for my recipe blog. I searched for long, failed to choose a suitable lne until I found Masud Rana.</p>
                                 <h5 class="autor_name">Danny Morisson </h5>
                                 <h6 class="autor_title">Founder & CEO, ABC</h6>
                             </div>
@@ -810,7 +810,7 @@
                 <div class="col-md-12 col-12">
                     <div class="footer_content">
                         <div class="footer_logo text-center wow fadeInUp">
-                            <a href="index.html"><span class="logo_text">Filix</span></a>
+                            <a href="index.html"><span class="logo_text">Masud Rana</span></a>
                         </div>
                         <h2 class="footer_title text-center wow fadeInUp">Let’s Make <span>Something Great</span> Together</h2>
                         <ul class="footer_contact text-center wow fadeInUp">
