try to done my protfolio page

--- a/index.html
+++ b/index.html
@@ -241,27 +241,26 @@
           >
             <div class="portfolio_item">
               <div class="port_img tilt">
-                <a href="portfolio-single.html"
+                <a href="https://medico.bio/"
                   ><img
                     src="assets/images/portfolio_img_1.jpg"
                     alt="img"
                     class="img-fluid"
                 /></a>
               </div>
-              <a class="exp" href="portfolio-single.html"
+              <a class="exp" href="https://medico.bio/"
                 ><span class="exp_inner"
                   ><span class="exp_hover">Explore</span></span
                 ></a
               >
               <div class="port_text">
-                <a href="portfolio-single.html">
+                <a href="https://medico.bio/">
                   <h3 class="port_title">
-                    NASA <br />
-                    Apollo Project
+                    Medico 
                   </h3>
                 </a>
                 <p class="catagory">
-                  - <a href="#">branding,</a> <a href="#">web design</a>
+                  - <a href="#">telemedicine</a> 
                 </p>
               </div>
             </div>
@@ -271,27 +270,26 @@
           >
             <div class="portfolio_item">
               <div class="port_img tilt">
-                <a href="portfolio-single.html"
+                <a href="https://cinematic.mobi/"
                   ><img
                     src="assets/images/portfolio_img_2.jpg"
                     alt="img"
                     class="img-fluid"
                 /></a>
               </div>
-              <a class="exp" href="portfolio-single.html"
+              <a class="exp" href="https://cinematic.mobi/"
                 ><span class="exp_inner"
                   ><span class="exp_hover">Explore</span></span
                 ></a
               >
               <div class="port_text">
-                <a href="portfolio-single.html">
+                <a href="https://cinematic.mobi/">
                   <h3 class="port_title">
-                    Tilda’s <br />
-                    Bi-Cycle Shop
+                    Cinematic
                   </h3>
                 </a>
                 <p class="catagory">
-                  - <a href="#">branding,</a> <a href="#">web design</a>
+                  - <a href="#">Online Video Streaming</a>
                 </p>
               </div>
             </div>
@@ -301,27 +299,26 @@
           >
             <div class="portfolio_item">
               <div class="port_img tilt">
-                <a href="portfolio-single.html"
+                <a href="http://web.bangladrama.mobi/"
                   ><img
-                    src="assets/images/portfolio_img_4.jpg"
+                    src="assets/images/portfolio_img_3.jpg"
                     alt="img"
                     class="img-fluid"
                 /></a>
               </div>
-              <a class="exp" href="portfolio-single.html"
+              <a class="exp" href="http://web.bangladrama.mobi/"
                 ><span class="exp_inner"
                   ><span class="exp_hover">Explore</span></span
                 ></a
               >
               <div class="port_text">
-                <a href="portfolio-single.html">
+                <a href="http://web.bangladrama.mobi/">
                   <h3 class="port_title">
-                    Restaurant <br />
-                    In Chinatown
+                    Bangladrama
                   </h3>
                 </a>
                 <p class="catagory">
-                  - <a href="#">branding,</a> <a href="#">web design</a>
+                  - <a href="#">entertainment</a>
                 </p>
               </div>
             </div>
@@ -333,7 +330,7 @@
               <div class="port_img tilt">
                 <a href="portfolio-single.html"
                   ><img
-                    src="assets/images/portfolio_img_3.jpg"
+                    src="assets/images/portfolio_img_4.jpg"
                     alt="img"
                     class="img-fluid"
                 /></a>
