try to done my protfolio page

--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
               <a class="navbar-brand logo" href="index.html"
                 ><span class="logo_text">MR</span></a
               >
-              <div class="select_lang ml-auto">
+              <a class="nav-link buy_btn" target="_blank" href="mailto:masudrana2779@gmail.com"><i class="fa fa-shopping-cart"></i>Hire me</a>
+              <!-- <div class="select_lang ml-auto">
                 <a href="#" class="lang en active">EN</a>
                 <a href="#" class="lang fr">FR</a>
-              </div>
-              <button
+              </div> -->
+              <!-- <button
                 class="navbar-toggler hamburger"
                 type="button"
                 data-toggle="collapse"
@@ -65,7 +66,7 @@
                   <span class="bar bar_2"></span>
                   <span class="bar bar_3"></span>
                 </span>
-              </button>
+              </button> -->
               <div class="opnen_menu">
                 <div class="header_main_menu">
                   <ul class="menu_item">
@@ -343,7 +344,7 @@
               <div class="port_text">
                 <a href="https://masudrana2779.github.io/turn/">
                   <h3 class="port_title">
-                    turn
+                    Turn
                   </h3>
                 </a>
                 <p class="catagory">
@@ -372,7 +373,7 @@
               <div class="port_text">
                 <a href="https://masudrana2779.github.io/AGENCYTM/">
                   <h3 class="port_title">
-                    AGENCYTM
+                    Agencytm
                   </h3>
                 </a>
                 <p class="catagory">
@@ -401,7 +402,7 @@
               <div class="port_text">
                 <a href="https://gramthekekini-web.vercel.app/">
                   <h3 class="port_title">
-                    gramthekekini
+                    Gramthekekini
                   </h3>
                 </a>
                 <p class="catagory">
@@ -503,7 +504,7 @@
     <!-- end about_wrap -->
 
     <!-- start capabiliti_wrap -->
-    <section class="capabiliti_wrap">
+    <!-- <section class="capabiliti_wrap">
       <div class="bg_text">
         <h1 class="bg_strock_text" data-parallax='{"x": 200}'>Capabilties</h1>
       </div>
@@ -974,7 +975,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- end capabiliti_wrap -->
 
     <!-- start testimonial_wrap -->
@@ -1266,7 +1267,7 @@
               </ul>
               <p class="footer_copy_right text-center wow fadeInUp">
                 Copyright © <span id="currentYear"></span>
-                <a href="https://masudrana2779.github.io/masudrana2779/"
+                <a href="https://mrana.me/"
                   >mrana</a
                 >
                 | All rights reserved
