--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="author" content="mrana.me" />
+    <meta
+      name="description"
+      content="Simplifies your healthcare"
+    />
+    <meta
+      name="keywords"
+      content="react, nextJs, redux, sass, typescript"
+    />
+    <meta name="og:url" content="https://medico.bio/" />
+    <meta
+      property="og:image"
+      content="./assets/images/hero_bg.jpg"
+    />
     <link
       rel="shortcut icon"
       href="assets/images/favicon.png"
@@ -48,7 +62,7 @@
               <a class="navbar-brand logo" href="index.html"
                 ><span class="logo_text">MR</span></a
               >
-              <a class="nav-link buy_btn" target="_blank" href="mailto:masudrana2779@gmail.com"><i class="fa fa-shopping-cart"></i>Hire me</a>
+              <a class="nav-link buy_btn" target="_blank" href="https://www.linkedin.com/in/masudrana2779/"><i class="fa fa-shopping-cart"></i>Hire me</a>
               <!-- <div class="select_lang ml-auto">
                 <a href="#" class="lang en active">EN</a>
                 <a href="#" class="lang fr">FR</a>
