--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
       name="keywords"
       content="react, nextJs, redux, sass, typescript"
     />
-    <meta name="og:url" content="https://medico.bio/" />
+    <meta name="og:url" content="https://mrana.me/" />
     <meta
       property="og:image"
-      content="./assets/images/hero_bg.jpg"
+      content="https://masudrana2779.github.io/masudrana2779/assets/images/hero_bg.jpg"
     />
+    
     <link
       rel="shortcut icon"
       href="assets/images/favicon.png"
